<resources>
    <string name="app_name">Weather App</string>
    <string name="get_weather_button_text">Get Weather</string>
    <string name="set_location_button_text">Set Location</string>
    <string name="about_button_text">About</string>
    <string name="title_activity_set_location">Map</string>
    <string name="current_weather_label">Current Weather</string>
    <string name="temperature_label">Temperature:</string>
    <string name="precipitation_label">Precipitation:</string>
    <string name="humidity_label">Humidity:</string>
    <string name="set_location_label">Enter City:</string>
    <string name="set_location_back_button">Back</string>
    <string name="set_location_button">Set Location</string>
</resources>
