<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/weather_background"
    tools:context="com.example.ryanholt.weatherapp.WeatherDisplay">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/current_weather_label"
        android:id="@+id/current_weather_label"
        android:textSize="@dimen/title_font_size"
        android:gravity="center"
        android:layout_marginBottom="@dimen/weather_label_margin" />

    <TextView
        android:layout_width="@dimen/weather_label_width"
        android:layout_height="@dimen/weather_label_height"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/temperature_label"
        android:id="@+id/temperature_label"
        android:layout_below="@+id/current_weather_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/weather_text_size"
        android:layout_margin="@dimen/weather_label_margin" />

    <TextView
        android:layout_width="@dimen/weather_label_width"
        android:layout_height="@dimen/weather_label_height"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/humidity_label"
        android:id="@+id/humidity_label"
        android:textSize="@dimen/weather_text_size"
        android:layout_below="@+id/precipitation_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/weather_label_margin" />

    <TextView
        android:layout_width="@dimen/weather_label_width"
        android:layout_height="@dimen/weather_label_height"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/precipitation_label"
        android:id="@+id/precipitation_label"
        android:layout_below="@+id/temperature_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/weather_label_margin"
        android:textSize="@dimen/weather_text_size" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/back_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textSize="20sp" />
</RelativeLayout>
